--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -1107,10 +1107,10 @@
  SSU_second_sudanese_civil_war_derg_support_tt: "Four brigades of §YSudanese Liberation Front§! forces cross the border from Ethiopia into the §YBlue Nile§! state"
  SSU_second_sudanese_civil_war_uganda_support: "Request Help From [UGA.GetNameWithFlag]"
  SSU_second_sudanese_civil_war_uganda_support_desc: "Yoweri Museveni, the President of [UGA.GetName], is a long time supporter, friend and ally of John Garang. In the late 80s, there were even [UGA.GetAdjective] army troops fighting alongside the SPLA. The support from Museveni dropped however when the country got involved in the Democratic Republic of Congo. If the situation in the Congo calms down, perhaps Museveni will be able to assist us again."
- SSU_second_sudanese_civil_war_uganda_support_tt: "If they accept, then"
+ SSU_second_sudanese_civil_war_uganda_support_tt: "If they accept, then\n"
  SSU_second_sudanese_civil_war_trade_ilemi_triangle: "Cede [925.GetName] For Weapons"
  SSU_second_sudanese_civil_war_trade_ilemi_triangle_desc: "The Ilemi Triangle is a small area between Sudan and Kenya. The area has no official agreed border, and effective administrative lines have varied across the years. Perhaps we should officially give the territory to Kenya, if they promise to help us get weapons against [SUD.GetName]."
- SSU_second_sudanese_civil_war_trade_ilemi_triangle_tt: "If they accept, then"
+ SSU_second_sudanese_civil_war_trade_ilemi_triangle_tt: "If they accept, then\n"
  SUD_second_sudanese_civil_war_iraqi_paratroopers: "Employ Iraqi Paratroopers"
  SUD_second_sudanese_civil_war_iraqi_paratroopers_desc: "Iraq has previously send us a small detachment of paratroopers, and they have taken part in the fight for Juba. We need to request a larger contingent of current and ex-members of Iraqi paratroopers and form an elite unit out of them."
  SUD_second_sudanese_civil_war_iraqi_paratroopers_tt: "A regiment of Iraqi paratroopers will be deployed in Khartoum"
