--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1929,7 +1929,7 @@
  Sudan.2.b: "We don't need them"
  Sudan.2.a.tt: "If they accept, then\n"
  Sudan.3.t: "[FROM.GetNameDef] Offers An Alliance"
- Sudan.3.d: "We have been offered an alliance by [FROM.GetNameDef], as they are too fighting against the [SUD.GetAdjective] government. They promise us increased representation in the new Sudan they are building. What should we respond?"
+ Sudan.3.d: "We have been offered an alliance by [FROM.GetNameDef], as they are too fighting against the [SUD.GetAdjective] government. They promise us increased representation in the new Sudan government that they are building. What should we respond?"
  Sudan.3.a: "We agree"
  Sudan.3.b: "We don't need them"
  Sudan.4.t: "[FROM.GetNameDef] Agrees To Ally Us"
@@ -2025,7 +2025,7 @@
  SouthSudanNews.4.a: "Interesting"
  SouthSudanNews.5.t: "Civil War In [SSU.GetNameDef]"
  SouthSudanNews.5.d: "A civil war has begun in the young nation of [SSU.GetName]. Only a few years after ending their conflict with [SUD.GetName], conflict has begun again. It seems that since there is no more a common enemy for the various rebel groups, a power struggle has started between the various groups."
- SouthSudanNews.5.a: "Interesting."
+ SouthSudanNews.5.a: "Interesting"
 
  war_in_darfur_threat: "War In Darfur"
  Darfur.2.t: "Darfuri Rebels Attack Golo"
