--- a/localisation/english/MD_focus_BOS_l_english.yml
+++ b/localisation/english/MD_focus_BOS_l_english.yml
@@ -325,7 +325,7 @@
  bos_expand_islamic_unity: "WIP DESC"
  bos_commence_centralization: "WIP DESC"
  bos_declare_a_islamic_take_over: "El Mudžahid Revolt"
- bos_declare_a_islamic_take_over_desc: "The forgin Figher we have deployed have been unhappy with our current action in the civil war and are planning a ongoing coup against the government!"
+ bos_declare_a_islamic_take_over_desc: "The foreign fighter we have deployed have been unhappy with our current action in the civil war and are planning a ongoing coup against the government!"
  #Decisions
  bos_core_states_2: "Islamic Conversion & Integration of [From.GetName]"
  Boost_yugo_nost_serbia: "Boost Yugonostalgia in lower balkans "
@@ -336,7 +336,7 @@
  bos_unite_yugoslavia: "Unite Yugoslavia"
  Bos_raid_weapon_stock_piles: "Raid weapon stockpiles"
  Bos_sway_local_police_units: "Sway local police forces"
- Bos_ask_for_support_from_croats: "Ask for support from croats "
+ Bos_ask_for_support_from_croats: "Ask for support from Croats "
  bos_sway_support_in_brcko: "Sway support in Brcko"
  bos_blow_up_arms_depo_in_srpska: "Blow up arms storage in Srpska "
  bos_rally_support_Out_of_unsko_sanski: "Rally support out of Unsko-Sanski"
@@ -431,7 +431,7 @@
  bos_save_by_peacekeepersEUFOR: "Upon §Rinternal war§! §YEUFOR§! forces will §YEnact§!"
  Bos_overtime_For_leader: "Leadership overtime"
  Bosnian_cooperator: "Bosnian Co-operator"
- Bosnian_polical_reformer: "Polical Reformer"
+ Bosnian_political_reformer: "Political Reformer"
  BOS_Roatation_of_leaders1: "Rotation is Due"
  BOS_Roatation_of_leaders: "Perform a Presidential Rotation"
  BOS_upset_with_term_length: "People's desire for representation in the government"
