--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,7 @@ v1.10.5
   - Botswana's event to crown Mosadi Seboko now fires in the correct year
   - Fixed Morocco's political leaders not working
   - Fixed the HEU enrichment limitation not actually working
+  - Fixed internal faction event localization
 
  Content:
   - Added additional decisions to a variety of different internal factions
